# enphase-poller

./: Dockerfile  Makefile  README.md  pyproject.toml
examples/: basic-grafana-dashboard.json
sql/: rebuild.sql
sql/schema/: 20-tables.sql  80-grants.sql  90-data.sql
src/enphase_poller/: __init__.py  poller.py
tests/: test_poller.py
