[tool.poetry]
name = "enphase-poller"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "Poll the Enphase Envoy and pull data into a database."
authors = ["Paul Lockaby <paul@paullockaby.com>"]
packages = [{include = "enphase_poller", from = "src"}]

[tool.poetry.scripts]
enphase_poller = "enphase_poller:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg = {extras = ["binary"], version = "^3.1.12"}
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
